@@ -1,31 +1,31 @@
-{2380, 3368},
-{1684, 2380},
-{1190, 1684},
-{842, 1190},
-{595, 842},
-{421, 595},
-{297, 421},
-{210, 297},
-{148, 210},
-{105, 148},
-{74, 105},
-{2836, 4008},
-{2004, 2836},
-{1418, 2004},
-{1002, 1418},
-{709, 1002},
-{501, 709},
-{648, 864},
-{864, 1296},
-{1296, 1728},
-{1728, 2592},
-{2592, 3456},
-{612, 936},
-{396, 612},
-{396, 612},
-{540, 720},
-{612, 792},
-{612, 1008},
-{792, 1224},
-{792, 1224},
-{1224, 792}
+{2380.0, 3368.0},
+{1684.0, 2380.0},
+{1190.0, 1684.0},
+{842.0, 1190.0},
+{595.0, 842.0},
+{421.0, 595.0},
+{297.0, 421.0},
+{210.0, 297.0},
+{148.0, 210.0},
+{105.0, 148.0},
+{74.0, 105.0},
+{2836.0, 4008.0},
+{2004.0, 2836.0},
+{1418.0, 2004.0},
+{1002.0, 1418.0},
+{709.0, 1002.0},
+{501.0, 709.0},
+{648.0, 864.0},
+{864.0, 1296.0},
+{1296.0, 1728.0},
+{1728.0, 2592.0},
+{2592.0, 3456.0},
+{612.0, 936.0},
+{396.0, 612.0},
+{396.0, 612.0},
+{540.0, 720.0},
+{612.0, 792.0},
+{612.0, 1008.0},
+{792.0, 1224.0},
+{792.0, 1224.0},
+{1224.0, 792.0}
